--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
       </li>
     </ol>
     <h2>Exercises</h2>
-    <a href="exercises/a-place.html">A Place</a>
+    <a href="exercises/a-place.html">A Place</a><br>
+    <a href="exercises/a-place-2.html">A Place 2</a><br>
+    <a href="exercises/a-place-3.html">A Place 3</a><br>
+    <a href="exercises/a-place-4.html">A Place 4</a><br>
+    <a href="exercises/a-place-5.html">A Place 5</a><br>
+    <a href="exercises/a-place-6.html">A Place 6</a><br>
+    <a href="exercises/a-place-7.html">A Place 7</a><br>
+    <a href="exercises/a-place-8.html">A Place 8</a><br>
+    <a href="exercises/a-place-9.html">A Place 9</a><br>
+    <a href="exercises/a-place-10.html">A Place 10</a>
     <br>
     <br>
     <br>
