--- a/exercises/a-place-4.html
+++ b/exercises/a-place-4.html
@@ -9,27 +9,44 @@
   </head>
   <body>
     <a href="../index.html">Back</a> 
-    <h1>&nbsp; &nbsp; A Place</h1>
+    <h1>
+    &nbsp; &nbsp;  
+    <del>A Place</del> &nbsp; Florence </h1>
     <ol>
-      <a href=""><button type="button" onclick="www.merriam-webster.com/dictionary/serene">Serene</button> </a>
-      <br>
-Serene
      <br>
-Bright 
-<br>
+Serene
+     <hr>
+Bright
+<hr>
 Beautiful
-<br>
-<mark> Sunny </mark>
-<br>
+<hr>
+ Sunny
+<hr>
 Bustle
-<br>
+<hr>
 Noisy
-<br>
+<hr>
 Colorful
-<br>
+<hr>
 Calm
-<br>
+<hr>
 Ornate
+<hr>
+Hot
+<hr> 
+Inspiring
+<hr>
+Cozy
+<hr>
+Exciting
+<hr>
+Fun
+<hr>
+Old
+<hr>
+History
+<hr>
+City
 
      </ol>
   </body>
