--- a/exercises/a-place-5.html
+++ b/exercises/a-place-5.html
@@ -9,19 +9,59 @@
   </head>
   <body>
     <a href="../index.html">Back</a> 
-    <h1>&nbsp; &nbsp; A Place</h1>
+    <br>
+    <small> &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; desribe a place</small>
     <ol>
-      <!-- #1 -->
-      <li>
-Think about a place that you like, describe it in 25 different ways.      </li>
-      <!-- #2 -->
-      <li>
-        <a href="https://en.wikipedia.org/wiki/Bedroom">A bedroom can be a place.</a>
-      </li>
-      <!-- #3 -->
-      <li>
-        A <a href="https://en.wikipedia.org/wiki/Hallway">Hallway</a> can also be a place.
-      </li>
+        <small>abroad</small>
+        <br>
+        <small>art</small>
+        <br>
+        <small>beautiful</small>
+        <br>
+        <small>bright</small>
+        <br>
+        <small>bustle</small>
+        <br>
+        <small>calm</small>
+        <br>
+        <small>city</small>
+        <br>
+        <small>colorful</small>
+        <br>
+        <small>congested</small>
+        <br>
+        <small>cozy</small>
+        <br>
+        <small>exciting</small>
+        <br>
+        <small>fun</small>
+        <br>
+        <small>happy</small>
+        <br>
+        <small>history</small>
+        <br>
+        <small>hot</small>
+        <br>
+        <small>inspiring</small>
+        <br>
+        <small>interesting</small>
+        <br>
+        <small>memorable</small>
+        <br>
+        <small>noisy</small>
+        <br>
+        <small>old</small>
+        <br>
+        <small>ornate</small>
+        <br>
+        <small>rest</small>
+        <br>
+        <small>rich</small>
+        <br>
+        <small>serene</small>
+        <br>
+        <small>sunny</small>
+        <br>
     </ol>
   </body>
 </html>
