--- a/exercises/a-place-2.html
+++ b/exercises/a-place-2.html
@@ -15,8 +15,8 @@
       <li>
       Fun     
     </li>
-      <!-- #2 -->
-      <li>
+       <!-- #2 -->
+      <li> 
         Noisy
       </li>
       <!-- #3 -->
@@ -111,6 +111,7 @@
       Rich
     </li>
     </ol>
+    <a href="a-place-3.html">Next</a> 
   </body>
 </html>
 
