--- a/exercises/a-place-7.html
+++ b/exercises/a-place-7.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <body style="background-color:powderblue;">
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>A Place</title>
@@ -9,20 +11,49 @@
   </head>
   <body>
     <a href="../index.html">Back</a> 
-    <h1>&nbsp; &nbsp; A Place</h1>
+    <h3>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The Place</h3>
     <ol>
-      <!-- #1 -->
-      <li>
-Think about a place that you like, describe it in 25 different ways.      </li>
-      <!-- #2 -->
-      <li>
-        <a href="https://en.wikipedia.org/wiki/Bedroom">A bedroom can be a place.</a>
-      </li>
-      <!-- #3 -->
-      <li>
-        A <a href="https://en.wikipedia.org/wiki/Hallway">Hallway</a> can also be a place.
-      </li>
-    </ol>
+      <details><summary>Art</summary>
+  <p><i>noun.</i> the expression or application of human creative skill and imagination, typically in a visual form such as painting or sculpture, producing works to be appreciated primarily for their beauty or emotional power.
+    <br>tencourage, includence, stimulate, motivate </details>
+      <details><summary>Colorful</summary>
+  <p><i>adj.</i> having much or varied color; bright.
+    <br>vivid, eye-catching, dramatic,interesting</p></details>
+      <details><summary>Rich</summary>
+  <p><i>adj.</i> plentiful; abundant.
+    <br>abundant, huge, substantial, plentiful</p></details>
+     <details><summary>Old</summary>
+  <p><i>adj.</i> having lived for a long time; no longer young.
+    <br>classical, aged, mature, of old</p></details>
+      <details><summary>Beautiful</summary>
+  <p><i>adj.</i> pleasing the senses or mind aesthetically.
+    <br>pleasing, attractive, lovely, charming</p></details>
+      <details><summary>Cozy</summary>
+  <p><i>adj.</i> giving a feeling of comfort, warmth, and relaxation.
+    <br>comfortable, cheerful, welcoming, warm</p></details>
+      <details><summary>Inspire</summary>
+  <p><i>adj.</i> having the effect of inspiring someone.
+    <br>encourage, includence, stimulate, motivate</p></details>
+   <details>
+    <summary>Serene</summary>
+  <p>adj. calm, peaceful, and untroubled; tranquil.
+    <br>
+  cloudless, clear, bright sunny</p>
+</details>
+<details>
+    <summary>History</summary>
+  <p>noun. the whole series of past events connected with someone or something.
+    <br>antiquity, study, narrative, archive</p>
+</details>
+<details>
+<summary>Inspire</summary>
+  <p><i>adj.</i> having the effect of inspiring someone.
+    <br>encourage, includence, stimulate, motivate</p>
+
+
+</ol>
+    <a href="a-place-8.html">Next</a>
+    <br>
   </body>
 </html>
 
