--- a/exercises/a-place-8.html
+++ b/exercises/a-place-8.html
@@ -9,20 +9,19 @@
   </head>
   <body>
     <a href="../index.html">Back</a> 
-    <h1>&nbsp; &nbsp; A Place</h1>
-    <ol>
-      <!-- #1 -->
-      <li>
-Think about a place that you like, describe it in 25 different ways.      </li>
-      <!-- #2 -->
-      <li>
-        <a href="https://en.wikipedia.org/wiki/Bedroom">A bedroom can be a place.</a>
-      </li>
-      <!-- #3 -->
-      <li>
-        A <a href="https://en.wikipedia.org/wiki/Hallway">Hallway</a> can also be a place.
-      </li>
-    </ol>
+    <br>
+    <br>
+    <br>
+    <center><h1>Florence, Italy</h1></center>
+  <center>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-iqf6ZA4nBo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+
+<br>
+    <br>
+    <br>
+    <a href="a-place-9.html">Next</a>
+
   </body>
 </html>
 
