--- a/exercises/a-place-9.html
+++ b/exercises/a-place-9.html
@@ -9,20 +9,26 @@
   </head>
   <body>
     <a href="../index.html">Back</a> 
-    <h1>&nbsp; &nbsp; A Place</h1>
-    <ol>
-      <!-- #1 -->
-      <li>
-Think about a place that you like, describe it in 25 different ways.      </li>
-      <!-- #2 -->
-      <li>
-        <a href="https://en.wikipedia.org/wiki/Bedroom">A bedroom can be a place.</a>
-      </li>
-      <!-- #3 -->
-      <li>
-        A <a href="https://en.wikipedia.org/wiki/Hallway">Hallway</a> can also be a place.
-      </li>
-    </ol>
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A Place</h1>
+    <ul>
+ <h3 style="color:orangered;">Old</h3>
+ <h3 style="color:orangered;">Happy</h3>
+ <h3 style="color:orangered;">Art</h3>
+ <h3>Colorful</h3>
+  <h3 style="color:orangered;">Sunny</h3>
+ <h3 style="color:orangered;">Hot</h3>
+ <h3 style="color:orangered;">Ornate</h3>
+ <h3 style="color:orangered;">Memorable</h3>
+ <h3 style="color:orangered;">Serene</h3>
+ <h3 style="color:orangered;">Abroad</h3>
+    
+</ul>
+
+
+<br>
+<br>
+    <a href="a-place-10.html">Next</a>
+    <br>
   </body>
 </html>
 
