--- a/exercises/a-place.html
+++ b/exercises/a-place.html
@@ -10,19 +10,12 @@
   <body>
     <a href="../index.html">Back</a> 
     <h1>&nbsp; &nbsp; A Place</h1>
-    <ol>
-      <!-- #1 -->
-      <li>
-Think about a place that you like, describe it in 25 different ways.      </li>
-      <!-- #2 -->
-      <li>
-        <a href="https://en.wikipedia.org/wiki/Bedroom">A bedroom can be a place.</a>
-      </li>
-      <!-- #3 -->
-      <li>
-        A <a href="https://en.wikipedia.org/wiki/Hallway">Hallway</a> can also be a place.
-      </li>
-    </ol>
+        <img src="file:/Users/madimarquez/Desktop/interactive/images/a%20place%20images/IMG_0180.JPG" alt="Florence" width="480" height="320">
+       <img src="file:/Users/madimarquez/Desktop/interactive/images/a%20place%20images/IMG_0178.JPG" alt="Florence" width="270" height="320"> 
+       
+   <br>
+   <br>
+    <a href="a-place-1.html">Next</a> 
   </body>
 </html>
 
