--- a/exercises/a-place-10.html
+++ b/exercises/a-place-10.html
@@ -23,6 +23,9 @@ Think about a place that you like, describe it in 25 different ways.      </li>
         A <a href="https://en.wikipedia.org/wiki/Hallway">Hallway</a> can also be a place.
       </li>
     </ol>
+        <a href="a-place-9.html">Previous</a>
+    <a href="a-place.html">Next</a>
+
   </body>
 </html>
 
