--- a/exercises/a-place-2.html
+++ b/exercises/a-place-2.html
@@ -111,6 +111,8 @@
       Rich
     </li>
     </ol>
+        <a href="a-place-1.html">Previous</a>
+
     <a href="a-place-3.html">Next</a> 
   </body>
 </html>
