--- a/exercises/a-place-3.html
+++ b/exercises/a-place-3.html
@@ -14,6 +14,8 @@
     <ol>
       </li>
     </ol>
+        <a href="a-place-2.html">Previous</a>
+
     <a href="a-place-4.html">Next</a>
   </body>
 </html>
