--- a/exercises/a-place-4.html
+++ b/exercises/a-place-4.html
@@ -49,6 +49,8 @@ History
 City
 
      </ol>
+         <a href="a-place-3.html">Previous</a>
+
      <a href="a-place-5.html">Next</a><br>
   </body>
 </html>
