--- a/exercises/a-place-5.html
+++ b/exercises/a-place-5.html
@@ -63,6 +63,8 @@
         <small>sunny</small>
         <br>
     </ol>
+        <a href="a-place-4.html">Previous</a>
+
     <a href="a-place-6.html">Next</a><br>
   </body>
 </html>
