--- a/exercises/a-place.html
+++ b/exercises/a-place.html
@@ -10,6 +10,8 @@
   <body>
     <a href="../index.html">Back</a> 
     <h1>&nbsp; &nbsp; A Place</h1>
+    <img src="IMG_0180.JPG">
+
         <img src="file:/Users/madimarquez/Desktop/interactive/images/a%20place%20images/IMG_0180.JPG" alt="Florence" width="480" height="320">
        <img src="file:/Users/madimarquez/Desktop/interactive/images/a%20place%20images/IMG_0178.JPG" alt="Florence" width="270" height="320"> 
        
