--- a/exercises/a-place-10.html
+++ b/exercises/a-place-10.html
@@ -9,20 +9,126 @@
   </head>
   <body>
     <a href="../index.html">Back</a> 
-    <h1>&nbsp; &nbsp; A Place</h1>
-    <ol>
-      <!-- #1 -->
-      <li>
-Think about a place that you like, describe it in 25 different ways.      </li>
-      <!-- #2 -->
-      <li>
-        <a href="https://en.wikipedia.org/wiki/Bedroom">A bedroom can be a place.</a>
-      </li>
-      <!-- #3 -->
-      <li>
-        A <a href="https://en.wikipedia.org/wiki/Hallway">Hallway</a> can also be a place.
-      </li>
-    </ol>
+    <style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
+</head>
+<body>
+
+<h2>A place described in 25 ways</h2>
+
+<table>
+ 
+  <tr>
+    <td>1</td>
+    <td>Abroad</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>Art</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>Beautiful</td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>Bright</td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>Bustle</td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>Calm</td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>City</td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>Colorful</td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>Congested</td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>Cozy</td>
+  </tr>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>Exciting</td>
+  </tr>
+  </tr>
+  <tr>
+    <td>12</td>
+    <td>Fun</td>
+  </tr>
+  </tr>
+  <tr>
+    <td>13</td>
+    <td>Happy</td>
+  </tr>
+  </tr>
+  <tr>
+    <td>14</td>
+    <td>History</td>
+  </tr>
+  </tr>
+  <tr>
+    <td>15</td>
+    <td>Hot</td>
+  </tr>
+  </tr>
+  <tr>
+    <td>17</td>
+    <td>Inspiring</td>
+  </tr>
+  <tr>
+    <td>18</td>
+    <td>Interesting</td>
+  </tr>
+  <tr>
+    <td>19</td>
+    <td>Memorable</td>
+  </tr>
+  <tr>
+    <td>20</td>
+    <td>Noisy</td>
+  </tr>
+   <tr>
+    <td>21</td>
+    <td>Old</td>
+  </tr>
+   <tr>
+    <td>22</td>
+    <td>Ornate</td>
+  </tr>
+   <tr>
+    <td>23</td>
+    <td>Rest</td>
+  </tr>
+   <tr>
+    <td>24</td>
+    <td>Rich</td>
+  </tr>
+   <tr>
+    <td>25</td>
+    <td>Serene</td>
+  </tr>
+</table>
+<br>
+<br>
+
+
+
         <a href="a-place-9.html">Previous</a>
     <a href="a-place.html">Next</a>
 
