--- a/exercises/a-place.html
+++ b/exercises/a-place.html
@@ -9,10 +9,13 @@
   </head>
   <body>
     <a href="../index.html">Back</a> 
-    <h1>&nbsp; &nbsp; A Place</h1>
-    <center><img src="IMG_0180.JPG "width="480" height="320">
-<img src="IMG_0178.JPG "width="270" height="320"> </center>
-      
+    <h1>&nbsp; &nbsp; Florence, Italy</h1>
+    <p>Click on Florence to continue</p>
+
+<a href="a-place-1.html"><img src="italy map.jpeg" width="400" height="379"> 
+</a>
+   <br>
+
        
    <br>
    <br>
