--- a/exercises/a-place/a-place-7.html
+++ b/exercises/a-place/a-place-7.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="images/coffee-mug.png"/>
   </head>
   <body>
-    <a href="../index.html">Back</a> 
+    <a href="../../index.html">Home</a> 
     <h3>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The Place</h3>
     <ol>
       <details><summary>Art</summary>
