--- a/exercises/a-place/a-place.html
+++ b/exercises/a-place/a-place.html
@@ -8,14 +8,13 @@
     <link rel="icon" type="image/png" href="images/coffee-mug.png"/>
   </head>
   <body>
-    <a href="../index.html">Back</a> 
+    <a href="../../index.html">Home</a> 
     <h1>&nbsp; &nbsp; Florence, Italy</h1>
     <p>Click on Florence to continue</p>
 
-<a href="a-place-1.html"><img src="italy map.jpeg" width="400" height="379"> 
+<a href="a-place-1.html"><img src="a-placeimages/italymap.jpeg" width="400" height="379"> 
 </a>
    <br>
-
        
    <br>
    <br>
