--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       </li>
     </ol>
     <h2>Exercises</h2>
-    <a href="exercises/a-place.html">A Place</a><br>
+    <a href="exercises/a-place/a-place.html">A Place</a><br>
+    <a href="exercises/DinnerTable/DinnerTable.html">Dinner Table</a><br>
     <br>
     <br>
     <br>
