--- a/exercises/a-place/a-place-3.html
+++ b/exercises/a-place/a-place-3.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="images/coffee-mug.png"/>
   </head>
   <body>
-    <a href="../index.html">Back</a> 
+    <a href="../../index.html">Home</a> 
      <h1>&nbsp; &nbsp; 25 Ways to Describe Florence      </h1>
     <marquee><h3>&nbsp; &nbsp; Serene &nbsp; Bright &nbsp; Beautiful &nbsp; Sunny &nbsp; Bustle &nbsp; Noisy &nbsp; Colorful &nbsp; Calm &nbsp; Ornate &nbsp; Hot &nbsp; Inspiring &nbsp; Cozy &nbsp; Exciting &nbsp; Fun &nbsp; Old &nbsp; History &nbsp; City &nbsp; Art &nbsp; Memorable &nbsp; Abroad &nbsp; Happy &nbsp; Rest &nbsp; Interesting &nbsp; Congested &nbsp; Rich</h3></marquee>
     <ol>
