--- a/exercises/a-place/a-place-4.html
+++ b/exercises/a-place/a-place-4.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="images/coffee-mug.png"/>
   </head>
   <body>
-    <a href="../index.html">Back</a> 
+    <a href="../../index.html">Home</a> 
     <h1>
     &nbsp; &nbsp;  
     <del>A Place</del> &nbsp; Florence </h1>
