--- a/exercises/a-place/a-place-8.html
+++ b/exercises/a-place/a-place-8.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="images/coffee-mug.png"/>
   </head>
   <body>
-    <a href="../index.html">Back</a> 
+    <a href="../../index.html">Home</a> 
     <br>
     <br>
     <br>
