--- a/exercises/a-place/a-place-9.html
+++ b/exercises/a-place/a-place-9.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="images/coffee-mug.png"/>
   </head>
   <body>
-    <a href="../index.html">Back</a> 
+    <a href="../../index.html">Home</a> 
     <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A Place</h1>
     <ul>
  <h3 style="color:orangered;">Old</h3>
