--- a/exercises/DinnerTable/DinnerTable.html
+++ b/exercises/DinnerTable/DinnerTable.html
@@ -10,7 +10,9 @@ table, th, td {
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>A Place</title>
-    <link rel="icon" type="image/png" href="images/coffee-mug.png"/>
+    <link rel="icon" type="image/png" href="images/coffee-mug.png"
+    />
+
   </head>
   <body>
     <a href="../../index.html">Home</a> 
