--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html> 
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Madi's class website</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="images/coffee-mug.png"/>
   </head>
   <body>
@@ -19,10 +20,13 @@
       <li>
         Project 3 
       </li>
-    </ol>
+      </ol>
+  <div class="red-box">
     <h2>Exercises</h2>
     <a href="exercises/a-place/a-place.html">A Place</a><br>
-    <a href="exercises/DinnerTable/DinnerTable.html">Dinner Table</a><br>
+    <a href="exercises/DinnerTable/DinnerTable.html">Dinner Table</a>
+</div>
+    <br>
     <br>
     <br>
     <br>
