--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <h1 id="top">Madi's class website</h1>
+    <br>
+    <br>
     <h2>Class projects</h2>
+    <br>
     <ol>
       <li>
         Project 6
@@ -21,9 +24,14 @@
         Project 3 
       </li>
       </ol>
+      <br>
+      <br>
     <h2>Exercises</h2>
+    <br>
+    <br>
     <a href="exercises/a-place/a-place.html">A Place</a><br>
-    <a href="exercises/DinnerTable/DinnerTable.html">Dinner Table</a>
+    <a href="exercises/DinnerTable/DinnerTable.html">Dinner Table</a><br>
+    <a href="exercises/Jodi'sInfra/Jodi'sInfra.html">Jodi's Infrastructure</a><br>
     <br>
     <br>
     <br>
