--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
     <ol>
       <li>
-        Project 6
+        <a href="projects/Project1.html">Project 1</a>
       </li>
       <li>
         Project 2 
