--- a/projects/1.html
+++ b/projects/1.html
@@ -8,13 +8,16 @@
   </head>
   <body>
         <a href="../index.html">Home</a> 
-         <div class="flex-container">
-        <div class="image">
-          <img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/1/7/1/7/227171-6-eng-GB/Americk-Primopost-SIC-Food-20142_news_large.jpg"> </img>
-          <p class="text">this is a test</p>
 
+       
+      <div class="container">
+        <div class="inside">
+         <div><img src="outside.jpg" class="image"> </div>
+         <div><p class="text">“And in the bug, which moved upward more surely on the gentler grade, he kept looking out between them as the road unwound, affording occasional glimpses of the Overlook Hotel, its massive bank of westward-looking windows reflecting back the sun. It was the place he had seen in the midst of the blizzard, the dark and booming place where some hideously familiar figure sought him down long corridors carpeted with jungle. The place Tony had warned him against. It was here. It was here. Whatever Redrum was, it was here.”</p> </div>
         </div>
-        </div>
+      </div>
+       
+
 <div class="flex-container ">
  <a href="Project1.html"> <div class="leftarrow"></div></a>
 <a href="2.html"><div class="rightarrow"></div></a>
