--- a/projects/4.html
+++ b/projects/4.html
@@ -8,10 +8,19 @@
   </head>
   <body>
         <a href="../index.html">Home</a> 
-         <div class="flex-container">
-        <div class="image">
-          <img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/1/7/1/7/227171-6-eng-GB/Americk-Primopost-SIC-Food-20142_news_large.jpg"> </img>
-          <p class="text">this is a test</p>
+         <div class="container">
+        <div class="inside">
+         <div><img src="" class="image"> </div>
+         <div><p class="text"> “Danny was standing outside Room 217 again.
+<br>
+<br>
+         The passkey was in his pocket. He was staring at the door with a kind of drugged avidity, and his upper body seemed to twitch and jiggle beneath his flannel shirt. He was humming softly and tunelessly.”</p> </div>
+        </div>
+      </div>
+
+
+
+
 
         </div>
         </div>
