--- a/projects/5.html
+++ b/projects/5.html
@@ -8,16 +8,18 @@
   </head>
   <body>
         <a href="../index.html">Home</a> 
-         <div class="flex-container">
-        <div class="image">
-          <img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/1/7/1/7/227171-6-eng-GB/Americk-Primopost-SIC-Food-20142_news_large.jpg"> </img>
-          <p class="text">this is a test</p>
+       
+       <div class="container">
+        <div class="inside">
+         <div><img src="image-4.jpg" class="image"> </div>
+         <div><p class="text"> “His mouth pealed forth deafening screams that were beyond human auditory range. He could only hammer on the door and hear the dead woman coming for him, bloated belly, dry hair, outstretched hands-something that had lain slain in that tub for perhaps years, embalmed there in magic.” </p> </div>
+        </div>
+      </div>
 
-        </div>
-        </div>
+        
 <div class="flex-container ">
  <a href="4.html"> <div class="leftarrow"></div></a>
-<a href=""><div class="rightarrow"></div></a>
+<a href="6.html"><div class="rightarrow"></div></a>
 </div>
 
   </body>
