--- a/projects/Project1.html
+++ b/projects/Project1.html
@@ -5,25 +5,36 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap">
- <style>
-
+<style>
+body {
+  background-image: url("background-01.jpg");
+  background-size: contain;
 }
 </style>
 
-  </head>
   <body>
-        <a href="../index.html">Home</a> 
-        <div class="flex-container">
-        <div class="image">
-          <img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/1/7/1/7/227171-6-eng-GB/Americk-Primopost-SIC-Food-20142_news_large.jpg"> </img>
-          <p class="text">this is a test</p>
 
-        </div>
-        </div>
-<div class="flex-container ">
-  <div class="leftarrow"></div>
-<a href="1.html"><div class="rightarrow" ></div></a>
-</div>
+        <a href="../index.html">Home</a> 
+        <marquee width="100%" direction="up" height="100%">
+<p class="scroll"> The Overlook Hotel</p>
+<br>
+<br>
+<p class="otherscroll"> The setting for Stephen King's <i>The Shining</i></p>
+
+<div class="otherscroll"><p>This story takes place in the winter season of 1975. The setting of the novel is the secluded Overlook Hotel in the Colorado Rocky Mountains, its own name a hint to the view of the scenery. Multiple renovations have restored this 140-room hotel to its original grandeur while offering over 14,000 square feet. The Overlook Hotel is famous for its old-world charm. 
+  <br>
+  <br>
+This hotel, however, is the site of many unpleasant events. These unpleasant events include the death of some of its guests and most recently, former winter caretaker Delbert Grady murdered his family and then himself in the hotel. 
+<br>
+<br>
+The story starts with Jack Torrance being hired for the newly vacant winter caretaker position at the Overlook. He and his family move to the hotel for the winter where the main plot of the story takes place…
+</p></div>
+
+</marquee>
+
+<a href="1.html" class="enter"> Enter </a>
+
+       
 
   </body>
 </html>
