--- a/projects/2.html
+++ b/projects/2.html
@@ -8,10 +8,13 @@
   </head>
   <body>
         <a href="../index.html">Home</a> 
-         <div class="flex-container">
-        <div class="image">
-          <img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/1/7/1/7/227171-6-eng-GB/Americk-Primopost-SIC-Food-20142_news_large.jpg"> </img>
-          <p class="text">this is a test</p>
+       
+       <div class="container">
+        <div class="inside">
+         <div><img src="image-6.jpg" class="image"> </div>
+         <div><p class="text"> "Across the room was a mirror, and deep down in its silver bubble a single word appeared in green fire and that word was: REDRUM."</p> </div>
+        </div>
+      </div>
 
         </div>
         </div>
