--- a/projects/12.html
+++ b/projects/12.html
@@ -5,18 +5,21 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-<body style="background-color: black;"> </body>
-
+  <style>
+    body {background-color: black;}
+    p {color: white; font-size: 125px; text-align: center;}
+    </style>
   </head>
   <body>
         <a href="../index.html">Home</a> 
+       
+    <p> "And the long darkness was over."</p>
 
-         <div class="redrum"><p>REDЯUM</p></div>
-
+        
 <div class="flex-container ">
- <a href="2.html"> <div class="leftarrow"></div></a>
-<a href="4.html"><div class="rightarrow"></div></a>
-</div></a>
+ <a href="11.html"> <div class="leftarrow"></div></a>
+<a href="12.html"><div class="rightarrow"></div></a>
+</div>
 
   </body>
 </html>
