--- a/projects/3.html
+++ b/projects/3.html
@@ -11,7 +11,7 @@
   <body>
         <a href="../index.html">Home</a> 
 
-         <div class="redrum"><p>MURDER</p></div>
+         <div class="redrum"><span class="blinking">MURDER</span></div>
 
 <div class="flex-container ">
  <a href="2.html"> <div class="leftarrow"></div></a>
