--- a/projects/Project1.html
+++ b/projects/Project1.html
@@ -14,6 +14,10 @@ body {
 
   <body>
 
+<audio autoplay loop hidden>
+  <source src="./MainTitle.mp3" type="audio/mpeg">
+</audio>
+
         <a href="../index.html">Home</a> 
         <marquee width="100%" direction="up" height="100%">
 <p class="scroll"> The Overlook Hotel</p>
