--- a/projects/12.html
+++ b/projects/12.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-  <style>
+    <style>
     body {background-color: black;}
     p {color: white; font-size: 125px; text-align: center;}
     </style>
@@ -13,12 +13,12 @@
   <body>
         <a href="../index.html">Home</a> 
        
-    <p> "And the long darkness was over."</p>
+      <p>"Come here, you little shit! Right now!"</p>
 
         
 <div class="flex-container ">
  <a href="11.html"> <div class="leftarrow"></div></a>
-<a href="12.html"><div class="rightarrow"></div></a>
+<a href="13.html"><div class="rightarrow"></div></a>
 </div>
 
   </body>
