--- a/projects/8.html
+++ b/projects/8.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="inside">
          <div><img src="image-7.jpg" class="image"> </div>
-         <div><p class="text">"Let me out of here!" Jack raged. "Let me out! Danny, doggone it, this is your father and I want to get out! Now do what I tell youl"</p> </div>
+         <div><p class="text">"Let me out of here!" Jack raged. "Let me out! Danny, doggone it, this is your father and I want to get out! Now do what I tell you"</p> </div>
         </div>
       </div>
 
