--- a/projects/Project1.html
+++ b/projects/Project1.html
@@ -14,8 +14,9 @@ body {
 
   <body>
 
-<audio autoplay loop hidden>
-  <source src="./MainTitle.mp3" type="audio/mpeg">
+<audio autoplay>
+  <source src="maintitle.ogg" type="audio/ogg">
+    Your browser does not support the audio element
 </audio>
 
         <a href="../index.html">Home</a> 
