--- a/projects/14.html
+++ b/projects/14.html
@@ -17,8 +17,8 @@
 
         
 <div class="flex-container ">
- <a href="11.html"> <div class="leftarrow"></div></a>
-<a href="12.html"><div class="rightarrow"></div></a>
+ <a href="13.html"> <div class="leftarrow"></div></a>
+<a href="Project1.html"><div class="rightarrow"></div></a>
 </div>
 
   </body>
