--- a/projects/4.html
+++ b/projects/4.html
@@ -10,7 +10,7 @@
         <a href="../index.html">Home</a> 
          <div class="container">
         <div class="inside">
-         <div><img src="" class="image"> </div>
+         <div><img src="10.html" class="image"> </div>
          <div><p class="text"> “Danny was standing outside Room 217 again.
 <br>
 <br>
