--- a/projects/6.html
+++ b/projects/6.html
@@ -11,7 +11,7 @@
        
        <div class="container">
         <div class="inside">
-         <div><img src="" class="image"> </div>
+         <div><img src="9.html" class="image"> </div>
          <div><p class="text"> “Great splashes of dried blood, flecked with tiny bits of grayish-white tissue, clotted the wallpaper. It made Danny feel sick. It was like a crazy picture drawn in blood, a surrealistic etching of a man's face drawn back in terror and pain, the mouth yawning and half the head pulverized-“ </p> </div>
         </div>
       </div>
