--- a/projects/9.html
+++ b/projects/9.html
@@ -11,7 +11,7 @@
        
        <div class="container">
         <div class="inside">
-         <div><img src="" class="image"> </div>
+         <div><img src="11.html" class="image"> </div>
          <div><p class="text">"Standing on top of it was a martini glass, a fifth of gin, and a plastic dish filled with olives.Leaning against it was one of the roque mallets from the equipment shed.
 He looked at it for a long time.
 <br>
