--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <h2>Exercises</h2>
     <br>
     <br>
-    <a href="exercises/a-place/a-place.html">A Place</a><br>
-    <a href="exercises/DinnerTable/DinnerTable.html">Dinner Table</a><br>
-    <a href="exercises/Jodi'sInfra/Jodi'sInfra.html">Jodi's Infrastructure</a><br>
+    <a href="exercises/a-place/a-place.html">Exercise 1</a><br>
+    <a href="exercises/DinnerTable/DinnerTable.html">Exercise 2</a><br>
+    <a href="exercises/Jodi'sInfra/Jodi'sInfra.html">Exercise 3</a><br>
+    <a href="exercise-4.html">Exercise 4</a>
     <br>
     <br>
     <br>
