--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a href="exercises/a-place/a-place.html">Exercise 1</a><br>
     <a href="exercises/DinnerTable/DinnerTable.html">Exercise 2</a><br>
     <a href="exercises/Jodi'sInfra/Jodi'sInfra.html">Exercise 3</a><br>
-    <a href="exercise-4.html">Exercise 4</a>
+    <a href="exercises/exercise-4/exercise-4.html">Exercise 4</a>
     <br>
     <br>
     <br>
