--- a/projects/14.html
+++ b/projects/14.html
@@ -5,21 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-  <style>
-    body {background-color: black;}
-    p {color: white; font-size: 125px; text-align: center;}
-    </style>
+   <body style="background-color: red;"> </body>
+
   </head>
   <body>
         <a href="../index.html">Home</a> 
-       
-    <p> "And the long darkness was over."</p>
-
-        
-<div class="flex-container ">
- <a href="13.html"> <div class="leftarrow"></div></a>
-<a href="Project1.html"><div class="rightarrow"></div></a>
-</div>
+<button onclick="window.location.href='15.html';" class="button">
+    </button>
 
   </body>
 </html>
