--- a/projects/16.html
+++ b/projects/16.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
   <style>
-    body {background-color: black;}
+    body 
+    {background-color: black;
+    }
+
     p {color: white; font-size: 125px; text-align: center;}
+    ba
     </style>
   </head>
   <body>
