--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <a href="projects/Project1.html">Project 1</a>
       </li>
       <li>
-        Project 2 
+        Project 2
+        <br> 
+        &nbsp;&nbsp; <a href="project2/project-2.1.html">Part 1</a>
       </li>
       <li>
         Project 3 
