--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <li>
         Project 2
         <br> 
-        &nbsp;&nbsp; <a href="project2/project-2.1.html">Part 1</a>
+        &nbsp;&nbsp; <a href="project2/project-2.1.html">Part 1</a><br>
+        &nbsp;&nbsp; <a href="project2/2.3/project-2.3.html">Part 3</a>
       </li>
       <li>
         Project 3 
