--- a/project2/2.4/2.4.html
+++ b/project2/2.4/2.4.html
@@ -35,6 +35,9 @@ The librarian stamped “Returned” on the card with a flourish and resumed her
 <i><b>Turn right at the bottom of the stairs,</i></b> she replied without looking up. <i><b>Go straight down the corridor to Room 107.</i></b></td>
 </tr>
 </table>
+<br>
+<br>
+<a href="https://glitch.com/edit/#!/elite-swift-park?path=index.html%3A1%3A0">glitch test</a>
 
       </body>
 </html>
