--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="projects/Project1.html">Project 1</a>
       </li>
       <li>
-        Project 2
+        <a href="project2/index.html">Project 2</a>
         <br> 
         &nbsp;&nbsp; <a href="project2/project-2.1.html">Part 1</a><br>
         &nbsp;&nbsp; <a href="project2/2.3/project-2.3.html">Part 3</a>
