--- a/index.html
+++ b/index.html
@@ -5,38 +5,42 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="images/coffee-mug.png"/>
+    <link rel="icon" type="image/png" href="waffle.png"/>
   </head>
   <body>
+    <div class="margin">
     <h1 id="top">Madi's class website</h1>
     <br>
     <br>
     <h2>Class projects</h2>
-    <br>
-    <ol>
-      <li>
-        <a href="projects/Project1.html">Project 1</a>
-      </li>
-      <li>
-        <a href="project2/index.html">Project 2</a>
+  
+        <a href="projects/Project1.html">
+        <button>Space&#8212;Place&#8212;Artifact</button>
+        </a><br>
+    
+        <a href="project2/index.html">
+        <button>Print to Screen</button>
+        </a>
         <br> 
-        &nbsp;&nbsp; <a href="project2/project-2.1.html">Part 1</a><br>
-        &nbsp;&nbsp; <a href="project2/2.3/project-2.3.html">Part 3</a>
-      </li>
-      <li>
+        &nbsp;&nbsp; <a href="project2/project-2.1.html">
+          <button>Part 1</button></a>
+        &nbsp;&nbsp; <a href="project2/2.3/project-2.3.html">
+          <button>Part 3</button></a><br>
         Project 3 
-      </li>
-      </ol>
       <br>
       <br>
     <h2>Exercises</h2>
-    <br>
-    <br>
-    <a href="exercises/a-place/a-place.html">Exercise 1</a><br>
-    <a href="exercises/DinnerTable/DinnerTable.html">Exercise 2</a><br>
-    <a href="exercises/Jodi'sInfra/Jodi'sInfra.html">Exercise 3</a><br>
-    <a href="exercises/exercise-4/exercise-4.html">Exercise 4</a><br>
-    <a href="exercises/image-map/image-map.html">Exercise 5</a><br>
+    <a href="exercises/a-place/a-place.html">
+      <button>A Place</button></a><br>
+    <a href="exercises/DinnerTable/DinnerTable.html">
+      <button>Dinner Table</button></a><br>
+    <a href="exercises/Jodi'sInfra/Jodi'sInfra.html">
+      <button>Reading Reflection</button></a><br>
+    <a href="exercises/exercise-4/exercise-4.html">
+      <button>Views From a Window</button></a><br>
+    <a href="exercises/image-map/image-map.html">
+      <button>Image Map</button></a><br>
+      </div>
     <br>
     <br>
     <br>
@@ -48,11 +52,6 @@
     </div>
         <div>
       
-    <footer>
-      <div>
-        <a href="#top">Back to top</a>
-      </div>
-    </footer>
   </body>
 </html>
 
